--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <div class="box clearfix">
                             <div class="col_half first">
                                 <span class="job-period">01 January, 2019 - Present</span>
-                                <h3 class="job-title">Software Engineer</h3>
+                                <h3 class="job-title">Senior Software Engineer</h3>
                                 <a class="job-url" href="http://bjitgroup.com/" target="_blank">BJIT Limited		               			</a>
                             </div>
                             <div class="col_half">
